Ensure footnote text is is right aligned

--- a/Slides/styles.css
+++ b/Slides/styles.css
@@ -9,6 +9,7 @@ body{
     bottom: 0;
     opacity: 0.25;
     font-size: 15px;
+    text-align: right;
 }
 
 .slide{
